@@ -1,135 +1,0 @@
-##############################################################################
-#
-# Copyright (c) 2004 Zope Corporation and Contributors.
-# All Rights Reserved.
-#
-# This software is subject to the provisions of the Zope Public License,
-# Version 2.0 (ZPL).  A copy of the ZPL should accompany this distribution.
-# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
-# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
-# FOR A PARTICULAR PURPOSE.
-#
-##############################################################################
-"""Test tcpdoc
-
-$Id: test_dochttp.py,v 1.2 2004/10/21 21:19:09 shh42 Exp $
-"""
-import os, sys
-
-if __name__ == '__main__':
-    execfile(os.path.join(sys.path[0], 'framework.py'))
-
-import unittest
-from Testing import ZopeTestCase
-from dochttp import dochttp
-
-directory = os.path.join(os.path.split(ZopeTestCase.__file__)[0],
-                         'ztc_doctest', 'recorded')
-
-expected = r'''
-
-  >>> print http(r"""
-  ... GET /@@contents.html HTTP/1.1
-  ... """)
-  HTTP/1.1 401 Unauthorized
-  Content-Length: 89
-  Content-Type: text/html;charset=utf-8
-  Www-Authenticate: basic realm=zope
-  <BLANKLINE>
-  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-        lang="en">
-  <BLANKLINE>
-  ...
-  <BLANKLINE>
-  </html>
-  <BLANKLINE>
-  <BLANKLINE>
-
-
-  >>> print http(r"""
-  ... GET /@@contents.html HTTP/1.1
-  ... Authorization: Basic bWdyOm1ncnB3
-  ... """)
-  HTTP/1.1 200 Ok
-  Content-Length: 89
-  Content-Type: text/html;charset=utf-8
-  <BLANKLINE>
-  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-        lang="en">
-  <BLANKLINE>
-  ...
-  <BLANKLINE>
-  </html>
-  <BLANKLINE>
-  <BLANKLINE>
-
-
-  >>> print http(r"""
-  ... GET /++etc++site/@@manage HTTP/1.1
-  ... Authorization: Basic bWdyOm1ncnB3
-  ... Referer: http://localhost:8081/
-  ... """)
-  HTTP/1.1 303 See Other
-  Content-Length: 0
-  Content-Type: text/plain;charset=utf-8
-  Location: @@tasks.html
-  <BLANKLINE>
-
-
-  >>> print http(r"""
-  ... GET / HTTP/1.1
-  ... Authorization: Basic bWdyOm1ncnB3
-  ... """)
-  HTTP/1.1 200 Ok
-  Content-Length: 89
-  Content-Type: text/html;charset=utf-8
-  <BLANKLINE>
-  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-        lang="en">
-  <BLANKLINE>
-  ...
-  <BLANKLINE>
-  </html>
-  <BLANKLINE>
-  <BLANKLINE>
-
-
-  >>> print http(r"""
-  ... GET /++etc++site/@@tasks.html HTTP/1.1
-  ... Authorization: Basic bWdyOm1ncnB3
-  ... Referer: http://localhost:8081/
-  ... """)
-  HTTP/1.1 200 Ok
-  Content-Length: 89
-  Content-Type: text/html;charset=utf-8
-  <BLANKLINE>
-  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-        lang="en">
-  <BLANKLINE>
-  ...
-  <BLANKLINE>
-  </html>
-  <BLANKLINE>
-  <BLANKLINE>
-'''
-      
-class Test(unittest.TestCase):
-
-    def test_dochttp(self):
-        import sys, StringIO
-        old = sys.stdout
-        sys.stdout = StringIO.StringIO()
-        dochttp(['-p', 'test', directory])
-        got = sys.stdout.getvalue()
-        sys.stdout = old
-        self.assert_(got == expected)
-
-def test_suite():
-    suite = unittest.TestSuite()
-    suite.addTest(unittest.makeSuite(Test))
-    return suite
-
-if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
-
